force-app/main/default/objects/Biz_Group_Answer__c/Biz_Group_Answer__c.object-meta.xml
<CustomObject>
    <label>Biz. Group Answer</label>
    <nameField>
        <displayFormat>BGA-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Biz. Group Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>