force-app/main/default/objects/Biz_Group_Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>점검방법</description>
    <label>Answer</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>