force-app/main/default/objects/Biz_Group_Answer__c/fields/BizGroupQuestion__c.field-meta.xml
<CustomField>
    <fullName>BizGroupQuestion__c</fullName>
    <label>Biz. Group Question</label>
    <referenceTo>Biz_Group_Question__c</referenceTo>
    <relationshipLabel>Biz. Group Answer</relationshipLabel>
    <relationshipName>Biz_Group_Answer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>